Fix summary buttons being misaligned

--- a/css/simulator.css
+++ b/css/simulator.css
@@ -183,7 +183,7 @@
     .simulator-summary {
       list-style-type: none;
       border-radius: 0.625rem;
-      margin-bottom: calc(-1 * max(1px, round(down, 0.125rem, 1px))); /* Account for border width rounding */
+      margin-block: calc(-1 * max(1px, round(down, 0.125rem, 1px))); /* Account for border width rounding */
     }
     .slider-wrapper {
       display: flex;
@@ -295,7 +295,7 @@
     .simulator-summary {
       list-style-type: none;
       border-radius: 0.625rem;
-      margin-bottom: calc(-1 * max(1px, round(down, 0.125rem, 1px))); /* Account for border width rounding */
+      margin-block: calc(-1 * max(1px, round(down, 0.125rem, 1px))); /* Account for border width rounding */
     }
     .extra-stats-wrapper {
       display: flex;
